; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_util.c_uv__random_rtlgenrandom.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_util.c_uv__random_rtlgenrandom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i64 0, align 8
@UV_EIO = common dso_local global i32 0, align 4
@UV_ENOSYS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv__random_rtlgenrandom(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i64 @pRtlGenRandom(i8* %10, i64 %11)
  %13 = load i64, i64* @FALSE, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %9
  %16 = load i32, i32* @UV_EIO, align 4
  store i32 %16, i32* %3, align 4
  br label %18

17:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %15, %8
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @pRtlGenRandom(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
